# nih-proposal-rag-system

./: .gitignore  LICENSE  README.md  app_nih_proposal.py  final_project.ipynb  pyproject.toml  requirements.txt  test_pipeline.py
.github/workflows/: python-ci.yml
nih_proposal_rag_system/config/: load_config.py
nih_proposal_rag_system/embeddings/: embedder.py
nih_proposal_rag_system/export/: json_export.py  pdf_export.py
nih_proposal_rag_system/formatting/: nih_style.py
nih_proposal_rag_system/ingestion/: chunker.py  ingest_texts.py  pdf_ingestion.py  pdf_loader.py
nih_proposal_rag_system/pipeline/: master_proposal_pipeline.py  topic_ranking.py  topic_relevance_pipeline.py
nih_proposal_rag_system/prompts/: gap_identification.py  idea_generation.py  proposal_blueprint.py  proposal_polisher.py  relevance_assessment.py  reviewer_simulation.py  specific_aims.py  topic_extraction.py
nih_proposal_rag_system/retrieval/: cache.py  faiss_store.py
nih_proposal_rag_system/vectorstore/: faiss_store.py
notebooks/: 01_topic_extraction.ipynb  02_relevance_assessment.ipynb  03_topic_relevance_pipeline.ipynb  04_master_pipeline.ipynb
streamlit_app/: 01_Ingestion.py  02_Pipeline.py  03_Results_Export.py  04_Reviewer.py  Home.py  app_topic_ranking.py
